--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,3 +6,15 @@
 .App {
   text-align: center;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  column-gap: 0px;
+  row-gap: 0px;
+}
+
+.h {
+  height: 36rem;
+}
