--- a/src/tailwind.generated.css
+++ b/src/tailwind.generated.css
@@ -28895,6 +28895,12 @@ video {
   height: 36rem;
 }
 
+.image-bg {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFkjOQ-jNbmYcGgKh1omDMVnMlUrr1Uxz0nA&usqp=CAU");
+  background-position: center;
+  background-size: contain;
+}
+
 @media (max-width: 1279px) {
   .xl\:container {
     width: 100%;
