add: done layout homepage

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -30,3 +30,12 @@
   background-position: center;
   background-size: contain;
 }
+
+.crop {
+  overflow: hidden;
+}
+
+.crop .img-feature {
+  width: 100%;
+  margin: -150px 0 0 0;
+}
