--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -40,7 +40,7 @@
   margin: -150px 0 0 0;
 }
 
-.card:hover > .card-detail {
+.card:hover div > .card-detail {
   @apply transition ease-out duration-200 opacity-100 transform hover:scale-y-100;
 }
 
