--- a/src/tailwind.generated.css
+++ b/src/tailwind.generated.css
@@ -28910,7 +28910,7 @@ video {
   margin: -150px 0 0 0;
 }
 
-.card:hover > .card-detail {
+.card:hover div > .card-detail {
   opacity: 1;
   --tw-translate-x: 0;
   --tw-translate-y: 0;
@@ -28922,11 +28922,11 @@ video {
   transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.card:hover > .card-detail:hover {
+.card:hover div > .card-detail:hover {
   --tw-scale-y: 1;
 }
 
-.card:hover > .card-detail {
+.card:hover div > .card-detail {
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
